# carbon-emission-analysis

./: .gitattributes  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
emissionsanalysis/: utils.py
emissionsanalysis/data/: make_dataset.py  structure.py
tests/: test_structure.py
